     unsupported fields. Enhance extension setting code to allow setting of
     all fields.
     [Steve Henson]

  *) Add print and set support for Issuing Distribution Point CRL extension.
     [Steve Henson]

  *) Change 'Configure' script to enable Camellia by default.
     [NTT]

 Changes between 0.9.8l (?) and 0.9.8m (?)  [xx XXX xxxx]

  *) Handle TLS versions 2.0 and later properly and correctly use the
     highest version of TLS/SSL supported. Although TLS >= 2.0 is some way
     off ancient servers have a habit of sticking around for a while...
     [Steve Henson]

  *) Modify compression code so it frees up structures without using the
     ex_data callbacks. This works around a problem where some applications
     call CRYPTO_cleanup_all_ex_data() before application exit (e.g. when
     restarting) then use compression (e.g. SSL with compression) later.
     This results in significant per-connection memory leaks and
     has caused some security issues including CVE-2008-1678 and
     CVE-2009-4355.
     [Steve Henson]

  *) Add option SSL_OP_LEGACY_SERVER_CONNECT which will allow clients to
     connect (but not renegotiate) with servers which do not support RI.
     Until RI is more widely deployed this option is enabled by default.
     [Steve Henson]

  *) Add "missing" ssl ctrls to clear options and mode.
     [Steve Henson]

  *) If client attempts to renegotiate and doesn't support RI respond with
     a no_renegotiation alert as required by draft-ietf-tls-renegotiation.
     Some renegotiating TLS clients will continue a connection gracefully
     when they receive the alert. Unfortunately OpenSSL mishandled
     this alert and would hang waiting for a server hello which it will never
     receive. Now we treat a received no_renegotiation alert as a fatal 
     error. This is because applications requesting a renegotiation might well
     expect it to succeed and would have no code in place to handle the server